# aetos

./: LICENSE  README  TODO  configure.in  cvs-authors
config/: prefix_uscore.m4  threads.m4
doc/developers/: events.doc  guide.doc  modules.doc  resources.doc
lib/: Makefile.am
lib/csp/: Makefile.am  common.h  csp.h  list.h  sdeque.h  slist.h
lib/irc/: Makefile.am  common.h  irc.c  irc.h  socket.c  socket.h  system.c  system.h
lib/replace/: Makefile.am
mod/: mod.h
mod/m_bach/: Makefile  bach.c
mod/m_emote/: Makefile  emote.c
mod/m_hello/: Makefile  hello.c
src/: Makefile.am  aetos.h  common.h  efuns.h  error.c  error.h  event.c  event.h  eventtypes.h  main.c  mem.c  mem.h  modules.c  modules.h  options.c  options.h  resources.h  stdconfig.h  system.c  system.h  utility.c  utility.h
